--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,19 @@
 .gutter {
   margin: 2px;
 }
+
+.profile-pic{
+    text-align: center;
+}
+
+.profile-pic img{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin: 0px auto;
+  margin-bottom: -50px;
+}
+
+.navbar-nav li a{
+  padding: 15px;
+}
