--- a/style/style.css
+++ b/style/style.css
@@ -2,16 +2,28 @@
   margin: 2px;
 }
 
+.panel-heading{
+  padding-top: 50px;
+}
+
+@media (min-width: 546px) {
+  .panel-heading{
+    padding-top: 10px;
+  }
+}
+
 .profile-pic{
     text-align: center;
 }
 
 .profile-pic img{
-  width: 100px;
-  height: 100px;
+  width: 110px;
+  height: 110px;
   border-radius: 50%;
   margin: 0px auto;
   margin-bottom: -50px;
+  border: 1px solid #ddd;
+  padding: 2px;
 }
 
 .navbar-nav li a{
